app/assets/stylesheets/layout.css.scss
@import "custom_twitter_bootstrap/variables";
@import "compass_twitter_bootstrap/mixins";
@import "shared/palette";

@font-face {
    font-family: 'ChunkFiveRegular';
    src: url('fonts/Chunkfive-webfont.eot');
    src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/Chunkfive-webfont.woff') format('woff'),
         url('fonts/Chunkfive-webfont.ttf') format('truetype'),
         url('fonts/Chunkfive-webfont.svg#ChunkFiveRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'MuseoSans500';
    src: url('fonts/MuseoSans_500-webfont.eot');
    src: url('fonts/MuseoSans_500-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/MuseoSans_500-webfont.woff') format('woff'),
         url('fonts/MuseoSans_500-webfont.ttf') format('truetype'),
         url('fonts/MuseoSans_500-webfont.svg#MuseoSans500') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'EBGaramondRegular';
    src: url('fonts/EBGaramond-webfont.eot');
    src: url('fonts/EBGaramond-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/EBGaramond-webfont.woff') format('woff'),
         url('fonts/EBGaramond-webfont.ttf') format('truetype'),
         url('fonts/EBGaramond-webfont.svg#EBGaramondRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}
html { height: 100%;}
body {
  .debug {
    background: image-url('grid30x10.png');
    div {
      background-image: none;
      background-color: transparent;
    }
  }
}


body {
  min-height: 100%;

  height:auto !important;

  height: 100%;
  background-image: image-url('light-tile.png');



  .row {
    background-color: $whats_the_matter;
  }
  p {
    font-family: EBGaramondRegular;
    font-weight: normal;
    font-size: 16px;
    line-height: 18px;
    margin-bottom: 1.125em;
  }
}
.container.page {
  padding-top: 40px;
  border: 1px solid $spooky_blue;
}
body.new,
body.edit {
  background: $whats_the_matter;


  .topbar .container {
    background: transparent;
   }

  .row {
    background: $whiteSmoke;
  }
}

h1.row {
  color: $please;
  font-size: 3em;
  line-height: 1em;
  margin-bottom: 0;
  padding-left: $gridGutterWidth;
  padding-top: $baseline;
  padding-bottom: $baseline;
}

h2,h3,h4 {
  font-family: MuseoSans500;
  font-weight: normal;
}

form {
  @include columns(24);
  background: $whiteSmoke;
}

.footer.row {
  background-color: $icing;
  background-image: linear-gradient(bottom, $icing 13%, $whats-the-matter 34%, $whats-the-matter 89%);
  background-image: -o-linear-gradient(bottom, $icing 13%, $whats-the-matter 34%, $whats-the-matter 89%);
  background-image: -moz-linear-gradient(bottom, $icing 13%, $whats-the-matter 34%, $whats-the-matter 89%);
  background-image: -webkit-linear-gradient(bottom, $icing 13%, $whats-the-matter 34%, $whats-the-matter 89%);
  background-image: -ms-linear-gradient(bottom, $icing 13%, $whats-the-matter 34%, $whats-the-matter 89%);
  background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.13, $icing),
    color-stop(0.34, $whats-the-matter),
    color-stop(0.89, $whats-the-matter)
  );

  height: 8 * $baseline;
  text-align: center;
  .copyright {
    display: block;
    position: relative;
    top: 100%;
    margin-top: -18px;
  }
}

.topbar-inner, .topbar .fill {
  background-color: $spooky_blue;
}

